[Instant Apps] Add banner show metrics.

Logs the reason the banner was/wasn't shown for an instant apps page.

Bug: 810187
Change-Id: I2bd06b21d3328944bf596e9428d461353a2b1818
Reviewed-on: https://chromium-review.googlesource.com/909328
Commit-Queue: Maria Khomenko <mariakhomenko@chromium.org>
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: agrieve <agrieve@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537958}
Former-commit-id: b7b99cff4ce5b301972914eb89edde679778fced