chrome/browser/android/instantapps/instant_apps_settings.cc
@@ -6,6 +6,7 @@
 
 #include "base/android/jni_android.h"
 #include "base/android/jni_string.h"
+#include "base/metrics/histogram_macros.h"
 #include "base/time/time.h"
 #include "base/values.h"
 #include "chrome/browser/banners/app_banner_settings_helper.h"
@@ -16,6 +17,28 @@
 
 using base::android::JavaParamRef;
 using base::android::ConvertJavaStringToUTF8;
+
+namespace {
+
+// This histogram is used to record UMA, please do not rearrange,
+// append entries only before AIA_COUNT.
+// GENERATED_JAVA_ENUM_PACKAGE: org.chromium.chrome.browser.instantapps
+// GENERATED_JAVA_PREFIX_TO_STRIP: AIA_
+enum class AiaBannerReason {
+  AIA_SHOULD_SHOW,
+  AIA_ALREADY_INSTALLED,
+  AIA_RECENTLY_BLOCKED,
+  AIA_RECENTLY_IGNORED,
+  AIA_IN_DOMAIN_NAVIGATION,
+  AIA_COUNT
+};
+
+void RecordShouldShowBannerMetric(AiaBannerReason reason) {
+  UMA_HISTOGRAM_ENUMERATION("Android.InstantApps.ShouldShowBanner", reason,
+                            AiaBannerReason::AIA_COUNT);
+}
+
+}  // namespace
 
 void InstantAppsSettings::RecordInfoBarShowEvent(
     content::WebContents* web_contents,
@@ -91,9 +114,22 @@ static jboolean JNI_InstantAppsSettings_ShouldShowBanner(
   const std::string& key = AppBannerSettingsHelper::kInstantAppsKey;
   base::Time now = base::Time::Now();
 
-  return !AppBannerSettingsHelper::HasBeenInstalled(web_contents, url, key) &&
-         !AppBannerSettingsHelper::WasBannerRecentlyBlocked(web_contents, url,
-                                                            key, now) &&
-         !AppBannerSettingsHelper::WasBannerRecentlyIgnored(web_contents, url,
-                                                            key, now);
+  if (AppBannerSettingsHelper::HasBeenInstalled(web_contents, url, key)) {
+    RecordShouldShowBannerMetric(AiaBannerReason::AIA_ALREADY_INSTALLED);
+    return false;
+  }
+
+  if (AppBannerSettingsHelper::WasBannerRecentlyBlocked(web_contents, url, key,
+                                                        now)) {
+    RecordShouldShowBannerMetric(AiaBannerReason::AIA_RECENTLY_BLOCKED);
+    return false;
+  }
+
+  if (AppBannerSettingsHelper::WasBannerRecentlyIgnored(web_contents, url, key,
+                                                        now)) {
+    RecordShouldShowBannerMetric(AiaBannerReason::AIA_RECENTLY_IGNORED);
+    return false;
+  }
+
+  return true;
 }
